# kelpie

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build-frontend.sh
docs/: DESIGN.md  index.html  marketing.css
frontend/: Cargo.toml
frontend/src/: api.rs  components.rs  icons.rs  lib.rs  markdown.rs  storage.rs  types.rs  viewport.rs
frontend/src/views/: inbox.rs  mod.rs  session.rs  term.rs
src/: commands.json  herdr.rs  main.rs  omp.rs
static/: app.js  index.html  style.css  sw.js
static/js/: api.js  dom.js  icons.js  markdown.js  overlay.js  sse.js  state.js  tabstrip.js  viewport.js
static/js/views/: inbox.js  session.js  term.js
static/wasm/: kelpie_frontend.d.ts  kelpie_frontend.js  kelpie_frontend_bg.wasm  kelpie_frontend_bg.wasm.d.ts
