[package]
name = "kelpie"
version = "0.1.0"
edition = "2021"
description = "Phone-first PWA for triaging a fleet of omp coding agents running in herdr terminal workspaces"
license = "MIT"
repository = "https://github.com/misty-step/kelpie"
readme = "README.md"
keywords = ["agents", "pwa", "terminal", "mobile"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
axum = "0.8"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["fs"] }

[profile.release]
lto = true
strip = true
