[package]
name = "kelpie-frontend"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
gloo-events = "0.2"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "=0.3.77"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = { version = "=0.3.77", features = [
  "Blob",
  "CssStyleDeclaration",
  "DomTokenList",
  "Document",
  "Element",
  "Event",
  "EventSource",
  "File",
  "FileList",
  "FocusEvent",
  "HashChangeEvent",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlPreElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "Location",
  "MediaQueryList",
  "MessageEvent",
  "Node",
  "VisibilityState",
  "VisualViewport",
  "Window",
]
}
yew = { version = "0.21", features = ["csr"] }
